--- a/InstaView/app/src/main/AndroidManifest.xml
+++ b/InstaView/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     </uses-permission>
 
     <application
+        android:largeHeap="true"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
