--- a/InstaView/app/src/main/AndroidManifest.xml
+++ b/InstaView/app/src/main/AndroidManifest.xml
@@ -22,6 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".FragmentComment"
+            android:label="@string/fragment_comments"
+            android:parentActivityName=".PopularPhotos" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="or.connect.instaview.PopularPhotos" />
+        </activity>
     </application>
 
 </manifest>
