--- a/GridImageSearch/app/src/main/AndroidManifest.xml
+++ b/GridImageSearch/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.FullImageActivity"
+            android:label="@string/full_image_activity" >
+        </activity>
     </application>
 
 </manifest>
