--- a/FragTweeter/app/src/main/AndroidManifest.xml
+++ b/FragTweeter/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:maxSdkVersion="18" />
 
     <application
-        android:name="com.codepath.apps.Tweeter.TwitterApp"
+        android:name=".TwitterApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_share"
         android:label="@string/app_name"
@@ -52,6 +52,10 @@
         <activity
             android:name=".TimelineActivity"
             android:label="@string/title_activity_timeline" >
+        </activity>
+        <activity
+            android:name=".ProfileActivity"
+            android:label="@string/title_activity_profile" >
         </activity>
     </application>
 
