--- a/HighFiveSensor/app/src/main/AndroidManifest.xml
+++ b/HighFiveSensor/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="or.connect.hifisensor" >
+    package="or.connect.highFiveSensor" >
 
     <application
         android:allowBackup="true"
